Filled in enough of the API to support the story Reader.  Sweet.
